<resources>
    <string name="app_name">Visual Planner</string>
    <string name="title_deadlines">Deadlines</string>
    <string name="events">Events</string>
    <string name="hint_name">Name</string>
    <string name="add_category_btn">Add</string>
    <string name="name_hint">Name</string>
    <string name="add_category_header">Add Category</string>
    <string name="category_color_picker_placeholder">placeholder for a color picker</string>
    <string name="fab_desc">adding deadline</string>
    <string name="openDrawerBtnDesc">opening drawer</string>
    <string name="deadlines_scrollview_desc">for scrolling gridlayout with tables.</string>
    <string name="weekday">W</string>
    <string name="placeholder">Enter description here…</string>
    <string name="alarmIconContentDesc">Visualisation of alarmclock</string>
    <string name="locationIconContentDesc">Visualisation of location marker</string>
    <string name="timeLabel">Time</string>
    <string name="timePlaceholder">12:31</string>
    <string name="locationPlaceholder">Halden, etellerannet 71b</string>
    <string name="dateLabel">Date</string>
    <string name="datePlaceholder">12.06.1993</string>
    <string name="deleteIconContentDesc">Icon for deleting the event / cardview</string>
    <string name="titlePlaceholder">Title</string>
    <string name="fabContentDesc">add event at new screen layer</string>
    <string name="calendarIconContentDesc">Visual of an date picker</string>
    <string name="timeIconContentDesc">Visual of a time picker</string>
    <string name="addEventLabel">Add Event</string>
    <string name="eventTitleInput">Title</string>
    <string name="eventDescInput">Description</string>
    <string name="eventLocationInput"><![CDATA[<insert save location feature here>]]></string>
    <string name="addEventSubmitBtn">submit</string>
    <string name="eventAlarmInput">adding time of event</string>
    <string name="eventDateInput">adding date for event</string>
    <string name="addEventAlarmInput">Time</string>
    <string name="addEventDateInput">Date</string>
    <string name="addEventAlarmIcon">visual add alarm for event</string>
    <string name="addEventCalendarIcon">visual add calendar for alarm</string>
    <string name="logout">logout</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
</resources>