<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event.AddEventFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addEventLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addEventLabel"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toTopOf="@+id/addEventTopGL" />

    <EditText
        android:id="@+id/eventTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eventTitleInput"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/eventDescInput"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/eventDescInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eventDescInput"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/eventAlarmInput"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleInput"
        android:importantForAutofill="no" />

    <!--autofillhints: set time/alarm programmatically: https://developer.android.com/guide/topics/text/autofill-optimize-->
    <EditText
        android:id="@+id/eventAlarmInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addEventAlarmInput"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/eventDateInput"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toBottomOf="@+id/eventDescInput" />

    <!--autofillhints: set date programmatically: https://developer.android.com/guide/topics/text/autofill-optimize-->
    <EditText
        android:id="@+id/eventDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addEventDateInput"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/eventLocationInput"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toBottomOf="@+id/eventAlarmInput" />

    <TextView
        android:id="@+id/eventLocationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventLocationInput"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addEventCancelBtn"
        app:layout_constraintEnd_toStartOf="@+id/addEventRightGL"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toBottomOf="@+id/eventDateInput" />

    <ImageView
        android:id="@+id/addEventAlarmIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_alarm_add"
        app:layout_constraintBottom_toBottomOf="@+id/eventAlarmInput"
        app:layout_constraintEnd_toStartOf="@+id/eventAlarmInput"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toTopOf="@+id/eventAlarmInput"
        tools:srcCompat="@drawable/ic_alarm"
        android:contentDescription="@string/addEventAlarmIcon" />

    <ImageView
        android:id="@+id/addEventCalendarIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_calendar_edit"
        app:layout_constraintBottom_toBottomOf="@+id/eventDateInput"
        app:layout_constraintEnd_toStartOf="@+id/eventDateInput"
        app:layout_constraintStart_toStartOf="@+id/addEventLeftGL"
        app:layout_constraintTop_toTopOf="@+id/eventDateInput"
        tools:srcCompat="@drawable/ic_calendar"
        android:contentDescription="@string/addEventCalendarIcon" />

    <Button
        android:id="@+id/addEventCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/addEventBottomGL"
        app:layout_constraintStart_toStartOf="@+id/eventLocationInput"
        app:layout_constraintTop_toBottomOf="@+id/eventLocationInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addEventSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addEventSubmitBtn"
        app:layout_constraintBottom_toBottomOf="@+id/addEventCancelBtn"
        app:layout_constraintEnd_toEndOf="@+id/eventLocationInput"
        app:layout_constraintTop_toTopOf="@+id/addEventCancelBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addEventTopGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addEventBottomGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="100dp"
        app:layout_constraintTop_toBottomOf="@+id/addEventCancelBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addEventLeftGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addEventRightGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>