<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="view"
            type="com.example.visualplanner.adapter.EventRecycleAdapter.EventViewHolder" />
        <variable
            name="event"
            type="com.example.visualplanner.model.Event" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{event.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/alarmIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/alarmIconContentDesc"
                android:cropToPadding="false"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventTitle"
                app:srcCompat="@drawable/ic_alarm" />

            <TextView
                android:id="@+id/timeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timePlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="@+id/alarmIcon"
                app:layout_constraintStart_toEndOf="@+id/alarmIcon"
                app:layout_constraintTop_toTopOf="@+id/alarmIcon" />

            <TextView
                android:id="@+id/dateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datePlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="@+id/calendarIcon"
                app:layout_constraintEnd_toEndOf="@+id/locationInput"
                app:layout_constraintTop_toTopOf="@+id/calendarIcon" />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/locationIconContentDesc"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="@+id/deleteIcon"
                app:layout_constraintEnd_toEndOf="@+id/alarmIcon"
                app:layout_constraintStart_toStartOf="@+id/alarmIcon"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/locationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
                app:layout_constraintStart_toEndOf="@+id/locationIcon"
                app:layout_constraintTop_toTopOf="@+id/locationIcon"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/deleteIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/deleteIconContentDesc"
                android:onClick="@{() -> view.onDelete()}"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarIcon"
                app:srcCompat="@drawable/ic_delete_forever" />

            <ImageView
                android:id="@+id/calendarIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/calendarIconContentDesc"
                android:theme="@style/Theme.VisualPlanner"
                app:layout_constraintBottom_toBottomOf="@+id/alarmIcon"
                app:layout_constraintEnd_toStartOf="@+id/dateInput"
                app:layout_constraintTop_toTopOf="@+id/alarmIcon"
                app:srcCompat="@drawable/ic_calendar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>